src/objects/Food_Bank_Checkin__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Box_Size__c</fullName>
        <label>Bag/Box Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_In_Time__c</fullName>
        <label>Check In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity_Usage_JSON__c</fullName>
        <label>Commodity Usage JSON</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Points_Remaining__c</fullName>
        <label>Points Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor__c</fullName>
        <label>Vistor</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <label>Vistor</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Food Bank Current Checkins</label>
</CustomObject>